--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -32,7 +32,10 @@ COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV
 
 OMNETPP_TKENV_DIR=@OMNETPP_TKENV_DIR@
 
-OBJS = tkapp$(TKENV_EMBED_SUFFIX).o tkcmd.o tklib.o objinsp.o modinsp.o statinsp.o structinsp.o inspect.o arrow.o
+OBJS = tkapp$(TKENV_EMBED_SUFFIX).o tkcmd.o tklib.o inspector.o \
+       inspfactory.o objinsp.o modinsp.o statinsp.o structinsp.o \
+       arrow.o 
+
 
 #
 # Targets
@@ -62,6 +65,12 @@ tkcmd.o : tkcmd.cc
 tklib.o : tklib.cc
 	$(CXX) -c $(COPTS) tklib.cc
 
+inspector.o: inspector.cc
+	$(CXX) -c $(COPTS) inspector.cc
+
+inspfactory.o: inspfactory.cc
+	$(CXX) -c $(COPTS) inspfactory.cc
+
 objinsp.o: objinsp.cc
 	$(CXX) -c $(COPTS) objinsp.cc
 
@@ -73,9 +82,6 @@ statinsp.o: statinsp.cc
 
 structinsp.o: structinsp.cc
 	$(CXX) -c $(COPTS) structinsp.cc
-
-inspect.o: inspect.cc
-	$(CXX) -c $(COPTS) inspect.cc
 
 arrow.o: arrow.cc arrow.h
 	$(CXX) -c $(COPTS) arrow.cc
@@ -96,11 +102,61 @@ clean:
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 arrow.o: arrow.cc \
   arrow.h
-inspect.o: inspect.cc \
+inspect.o: inspect.cc
+inspector.o: inspector.cc \
   ../../include/omnetpp.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
+  inspector.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cexception.h \
+  ../../include/errmsg.h \
+  ../../include/cobject.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cllist.h \
+  ../../include/chead.h \
+  ../../include/cwatch.h \
+  ../../include/cpar.h \
+  ../../include/cgate.h \
+  ../../include/cmessage.h \
+  ../../include/cpacket.h \
+  ../../include/cmsgheap.h \
+  ../../include/cstk.h \
+  ../../include/cmodule.h \
+  ../../include/cstat.h \
+  ../../include/cdensity.h \
+  ../../include/chist.h \
+  ../../include/cvarhist.h \
+  ../../include/cpsquare.h \
+  ../../include/cksplit.h \
+  ../../include/coutvect.h \
+  ../../include/cdetect.h \
+  ../../include/ctopo.h \
+  ../../include/cnetmod.h \
+  ../../include/cfsm.h \
+  ../../include/protocol.h \
+  ../../include/cenvir.h \
+  ../../include/cenum.h \
+  ../../include/cstruct.h \
+  ../../include/onstartup.h \
+  ../../include/cchannel.h \
+  ../../include/cdispstr.h \
+  ../../include/envirext.h \
+  ../../include/ccoroutine.h \
+  ../envir/omnetapp.h \
+  ../envir/args.h \
+  ../envir/envdefs.h
+inspfactory.o: inspfactory.cc \
+  ../../include/omnetpp.h \
+  tkapp.h \
+  tklib.h \
+  inspector.h \
+  inspfactory.h \
   ../../include/defs.h \
   ../../include/util.h \
   ../../include/cexception.h \
@@ -155,7 +211,8 @@ modinsp.o: modinsp.cc \
   ../../include/cdensity.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
+  inspfactory.h \
+  modinsp.h \
   arrow.h \
   ../../include/defs.h \
   ../../include/cobject.h \
@@ -172,13 +229,17 @@ modinsp.o: modinsp.cc \
   ../../include/cexception.h \
   ../envir/args.h \
   ../envir/envdefs.h \
-  ../../include/envirext.h
+  ../../include/envirext.h \
+  ../../include/macros.h \
+  inspector.h \
+  ../../include/onstartup.h \
+  ../../include/ctypes.h
 objinsp.o: objinsp.cc \
   ../../include/omnetpp.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
-  arrow.h \
+  inspfactory.h \
+  objinsp.h \
   ../../include/defs.h \
   ../../include/util.h \
   ../../include/cexception.h \
@@ -221,7 +282,9 @@ objinsp.o: objinsp.cc \
   ../../include/ccoroutine.h \
   ../envir/omnetapp.h \
   ../envir/args.h \
-  ../envir/envdefs.h
+  ../envir/envdefs.h \
+  inspector.h \
+  structinsp.h
 statinsp.o: statinsp.cc \
   ../../include/cmodule.h \
   ../../include/cmessage.h \
@@ -233,8 +296,8 @@ statinsp.o: statinsp.cc \
   ../../include/cdensity.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
-  arrow.h \
+  inspfactory.h \
+  statinsp.h \
   ../../include/defs.h \
   ../../include/cobject.h \
   ../../include/ccoroutine.h \
@@ -250,12 +313,17 @@ statinsp.o: statinsp.cc \
   ../../include/cexception.h \
   ../envir/args.h \
   ../envir/envdefs.h \
-  ../../include/envirext.h
+  ../../include/envirext.h \
+  ../../include/macros.h \
+  inspector.h \
+  ../../include/onstartup.h \
+  ../../include/ctypes.h
 structinsp.o: structinsp.cc \
   ../../include/cstruct.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
+  inspfactory.h \
+  structinsp.h \
   ../../include/cobject.h \
   ../../include/cenum.h \
   ../../include/util.h \
@@ -268,7 +336,11 @@ structinsp.o: structinsp.cc \
   ../envir/args.h \
   ../envir/envdefs.h \
   ../../include/envirext.h \
-  ../../include/cpar.h
+  ../../include/cpar.h \
+  ../../include/macros.h \
+  inspector.h \
+  ../../include/onstartup.h \
+  ../../include/ctypes.h
 tkapp.o: tkapp.cc \
   ../envir/appreg.h \
   ../envir/cinifile.h \
@@ -282,7 +354,9 @@ tkapp.o: tkapp.cc \
   tkdefs.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
+  inspector.h \
+  inspfactory.h \
+  modinsp.h \
   ../../include/chead.h \
   ../../include/onstartup.h \
   ../../include/cobject.h \
@@ -301,7 +375,8 @@ tkapp.o: tkapp.cc \
   ../envir/omnetapp.h \
   ../../include/cexception.h \
   ../envir/args.h \
-  ../../include/envirext.h
+  ../../include/envirext.h \
+  ../../include/macros.h
 tkcmd.o: tkcmd.cc \
   ../../include/cenvir.h \
   ../../include/carray.h \
@@ -311,7 +386,8 @@ tkcmd.o: tkcmd.cc \
   ../../include/cstruct.h \
   tkapp.h \
   tklib.h \
-  tkinsp.h \
+  inspector.h \
+  inspfactory.h \
   ../../include/defs.h \
   ../../include/cpar.h \
   ../../include/cobject.h \
@@ -328,13 +404,15 @@ tkcmd.o: tkcmd.cc \
   ../../include/cexception.h \
   ../envir/args.h \
   ../envir/envdefs.h \
-  ../../include/envirext.h
+  ../../include/envirext.h \
+  ../../include/macros.h \
+  ../../include/onstartup.h
 tklib.o: tklib.cc \
   ../../include/cobject.h \
   ../../include/cmodule.h \
   ../../include/csimul.h \
   tklib.h \
-  tkinsp.h \
+  inspector.h \
   tkapp.h \
   ../envir/patmatch.h \
   ../../include/util.h \
