--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,7 @@ OMNETPP_TUTORIAL_DIR="$OMNETPP_ROOT/tutorial"
 OMNETPP_TEST_DIR="$OMNETPP_ROOT/test"
 OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
 
-OMNETPP_SAMPLES="dyna fddi fifo1 fifo2 hcube hist nim pvmex token demo"
+OMNETPP_SAMPLES="dyna fddi fifo1 fifo2 hcube hist nim token demo"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
 OMNETPP_INCL_DIR="$OMNETPP_ROOT/include"
@@ -588,7 +588,6 @@ AC_CONFIG_FILES(
   samples/hcube/Makefile
   samples/hist/Makefile
   samples/nim/Makefile
-  samples/pvmex/Makefile
   samples/token/Makefile
   samples/demo/Makefile
   tutorial/queues/Makefile
