--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -6,8 +6,8 @@ snapshot-file = token.sna
 log-parchanges = no
 random-seed = 1
 total-stack-kb=4096 ;4 Mbyte -- increase if necessary
-sim-time-limit = 180s
-; cpu-time-limit= 60s
+sim-time-limit = 1800s
+; cpu-time-limit= 300s
 
 [Cmdenv]
 runs-to-execute = 1,2,3
@@ -35,7 +35,7 @@ Computer.gen =  "i=gen"
 Computer.mac =  "i=queue"
 
 [Parameters]
-token.num_messages = 10000
+token.num_messages = 1000000
 
 [Run 1]
 # ask num_stations and ia_time parameters
