NED demo (samples/ned) added

--- a/Makefile.in
+++ b/Makefile.in
@@ -113,6 +113,9 @@ token:
 dyna2:
 	cd $(OMNETPP_SAMPLES_DIR)/dyna2 && $(MAKE)
 
+ned:
+	cd $(OMNETPP_SAMPLES_DIR)/ned && $(MAKE)
+
 demo:
 	cd $(OMNETPP_SAMPLES_DIR)/demo && $(MAKE)
 
