--- a/Makefile.vc
+++ b/Makefile.vc
@@ -48,7 +48,7 @@ components: libs progs configsamples samples configtutorial thetutorial
 
 LIBS=$(ENVIR_ILIB) sim envir cmdenv tkenv nedxml
 PROGS=utils nedc gned plove
-SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim token dyna2 demo
+SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim token dyna2 ned demo
 
 #
 # Group targets. Note that utils has to be built BEFORE other libs and progs.
@@ -146,6 +146,10 @@ token:
 dyna2:
 	@echo ===== Compiling $@ ====
 	cd /d $(OMNETPP_SAMPLES_DIR:/=\)\dyna2 && $(MAKE) $(MOPTS) -f $@.mak
+
+ned:
+	@echo ===== Compiling $@ ====
+	cd /d $(OMNETPP_SAMPLES_DIR:/=\)\ned && $(MAKE) $(MOPTS) -f $@.mak
 
 demo:
 	@echo ===== Compiling $@ ====
