--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,7 @@ OMNETPP_TUTORIAL_DIR="$OMNETPP_ROOT/tutorial"
 OMNETPP_TEST_DIR="$OMNETPP_ROOT/test"
 OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
 
-OMNETPP_SAMPLES="dyna fddi fifo1 fifo2 hcube hist nim token demo"
+OMNETPP_SAMPLES="dyna fddi fifo1 fifo2 hcube hist nim token ned demo"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
 OMNETPP_INCL_DIR="$OMNETPP_ROOT/include"
@@ -589,6 +589,7 @@ AC_CONFIG_FILES(
   samples/hist/Makefile
   samples/nim/Makefile
   samples/token/Makefile
+  samples/ned/Makefile
   samples/demo/Makefile
   tutorial/queues/Makefile
   include/Makefile
