opp_makemake_vc.pl lost .pl extension and now gets copied to the bin/ directory

--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -7,6 +7,7 @@
 # Targets
 #
 all: seedtool.exe tcl2c.exe opp_replace.exe
+	copy opp_makemake_vc $(OMNETPP_BIN_DIR:/=\)
 
 seedtool.exe : seedtool.cc
 	$(CXX) /Tp seedtool.cc
