--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -19,8 +19,8 @@ all: seedtool tcl2c
 	cp opp_makedep $(OMNETPP_BIN_DIR)
 	cp opp_neddoc $(OMNETPP_BIN_DIR)
 	cp splitvec $(OMNETPP_BIN_DIR)
+	cp neddoc.xsl $(OMNETPP_BIN_DIR)
 	../utils/install-prog seedtool $(OMNETPP_BIN_DIR)
-	cd $(OMNETPP_BIN_DIR); rm -f makemake; ln -sf opp_makemake makemake
 
 seedtool : seedtool.cc
 	$(CXX) seedtool.cc -o seedtool
