used neddoc.xsl from same directory

--- a/src/utils/opp_neddoc.in
+++ b/src/utils/opp_neddoc.in
@@ -1,5 +1,5 @@
 #! /bin/sh
-NEDDOC_XSL=@OMNETPP_UTILS_DIR@/neddoc.xsl
+NEDDOC_XSL=`dirname $0`/neddoc.xsl
 TMPFILE=/tmp/opp_neddoc.tmp.$$
 
 cleanup()
