--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -26,7 +26,7 @@ OBJS=ebnf.tab.o lex.yy.o jar.o jar_lib.o jar_mod.o jar_expr.o jar_mem.o
 # Targets
 #
 all: nedc nedtool
-
+	cp msgc $(OMNETPP_BIN_DIR)
 
 nedtool: main.o
 	$(CXX) $(LDFLAGS) -o nedtool main.o -L$(OMNETPP_LIB_DIR) -lnedxml $(XML_LIBS)
